--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Pali&Dispari</title>
 </head>
 <body>
-    
-
+    <h1>Palindromicità (non penso si dica così)</h1>
+    <p>Scrivi una parola, ti dirò se è palindroma.</p>
+    <input type="text" id="palindromo-input">
+    <button id="palindromo-btn">Cliccami !</button>
+    <h2 id="palindromo-risultato"></h2>
 
     <script src="js/script.js"></script>
 </body>
