Pari o dispari: Random function.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
     <h2 id="palindromo-risultato"></h2>
 
     <script src="js/script.js"></script>
+    <hr>
+    <h1>Pari o Dispari</h1>
+    <h3>Isruzioni</h3>
+    <p>Scegli se pari o dispari.</p>
+    <p>Inserisci un numero</p>
+    <input type="text" id=>
+    <button id=>Pari</button>
+    <button id=>Dispari</button>
+    <h2 id=></h2>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
