--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h1>Pari o Dispari</h1>
     <h3>Isruzioni</h3>
     <p>Scegli se pari o dispari.</p>
-    <p>Inserisci un numero</p>
-    <input type="text" id=>
-    <button id=>Pari</button>
-    <button id=>Dispari</button>
-    <h2 id=></h2>
+    <p>Scrivi un numero da 1 a 5.</p>
+    <input type="text" id="numero-user">
+    <button id="pari-btn">Pari</button>
+    <button id="dispari-btn">Dispari</button>
+    <h2 id="game-result"></h2>
 
     <script src="js/script.js"></script>
 </body>
